# Methodological_Paper_Repo

./: .gitignore  README.md
4_Basketball/: NBA_SUITE_2026_05_19.md  PAPER_STATE.md  PRE_REGISTRATION_NBA_PLAYOFFS_25_26.md  README.md  _MANIFEST.md  pyproject.toml  state.md
4_Basketball/RMD_SRC_PIPELINE/: AMENDMENT_v1.1_BUG_CORRECTION_LOCKED.md  AMENDMENT_v1.1_MPG_TIER_PARALLEL_ARM_LOCKED.md  AMENDMENT_v1.2_POSITION_ADJUDICATION_LOCKED.md  AMENDMENT_v1.3_DIP_ON_RESIDUALS_LOCKED.md  PAPER_SECTION_4_2_NBA_DRAFT.md  PRE_REG_NBA_RMD_SRC_FULL_LOCKED.md  PRE_REG_NBA_RMD_SRC_SPATIAL_LOCKED.md  SHA_LOCK.txt  SLOAN_PRE_REG_TEST_1_ADJUDICATED_v1.0_LOCKED.md  SLOAN_PRE_REG_TEST_1_NCAA_M_ADJUDICATED_v1.0_LOCKED.md  SLOAN_PRE_REG_TEST_1_NCAA_W_ADJUDICATED_v1.0_LOCKED.md  SLOAN_PRE_REG_TEST_1_WNBA_ADJUDICATED_v1.0_LOCKED.md  SLOAN_PRE_REG_TEST_2_MAE_DELTA_v1.0_LOCKED.md
4_Basketball/audit_runs/: phase3_elo_recency_grid.csv  projections_review.html  v6_drive_fta_compose.csv
4_Basketball/config/: apply_fetcher_schedule.ps1  fetcher_schedule.yaml  paths.py  twitter_accounts.json  twitter_state.json
4_Basketball/docs/: BATCH_VET01_VETERAN_ARCHETYPES_PRE_REG.md  BATCH_VET01_VETERAN_ARCHETYPES_VERDICTS.md  COMPETITION_NORMALIZATION_2026_06_07.md  COMPETITION_NORMALIZATION_V2_2026_06_07.md  COMPETITION_NORMALIZATION_V3_2026_06_07.md  COMPETITION_NORMALIZATION_V4_HONEST_2026_06_07.md  DRAFT_PREP_2026_v0.md  DRAFT_PREP_2026_v1.md  MPG_POST_MORTEM_for_desktop.md  NOVEL_METRICS_SUITE_VERDICT_2026_06_05.md  NOVEL_OFFENSIVE_METRICS_BRAINSTORM_2026_06_05.md  RESOLVE_LOTTERY_2026_06_07.md  (+37 more)
(+2452 files in other folders)
